--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -47,7 +47,7 @@
     - additionalTerms
 -
   name: Skills and experience
-  summary_page_description: Buyers will use the essential and nice-to-have skills and experience to help them evaluate suppliers’ technical competence.
+  summary_page_description: Buyers will use the essential and nice-to-have skills and experience to help them evaluate sellers’ technical competence.
   questions:
     - essentialRequirementsOutcomes
     - essentialRequirementsSpecialists
@@ -56,7 +56,7 @@
     - niceToHaveRequirementsSpecialists
     - niceToHaveRequirementsParticipants
 -
-  name: How suppliers will be evaluated
+  name: How sellers will be evaluated
   questions:
     - numberOfSuppliersOutcomes
     - numberOfSuppliersSpecialists
