--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -3,29 +3,29 @@ id: culturalFitCriteria
 question: Cultural fit criteria
 question_advice: |
 
-  Cultural fit is about how well you and the specialist work together. 
+  Cultural fit is about how well you and the specialist work together.
 
-  #Cultural fit is:
+  ##Cultural fit is:
   - how the specialist works with other people
   - how the specialist solves problems
   - the specialist’s approach to making decisions
   - how the specialist shares knowledge and experience
   - the specialist’s attitude to making mistakes
 
-  #Cultural fit isn’t:
+  ##Cultural fit isn’t:
   - whether the specialist looks, talks or behaves in the same way as you
   - about having agile skills – that’s technical competence
 
-  #Giving points for individual criteria (optional)
+  ##Giving points for individual criteria (optional)
   You can give points to individual criteria, eg ‘transparent and collaborative when making decisions – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 
-  #Add cultural fit criteria
+  ##Add cultural fit criteria
   When you evaluate shortlisted specialists on cultural fit, you must use the criteria you list here.
 
 
-  #Suggested criteria
+  ##Suggested criteria
 
   - Work as a team with our organisation and other suppliers
   - Be transparent and collaborative when making decisions
