--- a/frameworks/digital-service-professionals/questions/brief-responses/availabilityOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/availabilityOutcomes.yml
@@ -1,7 +1,7 @@
 name: Date the supplier can start work
 id: availability
-question: When can the supplier start work?
-hint: 'eg 31/12/2016'
+question: When can you start?
+hint: 'For example: 31/12/2016'
 type: text
 smaller: true
 depends:
