--- a/frameworks/digital-service-professionals/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-service-professionals/questions/brief-responses/respondToEmailAddress.yml
@@ -1,5 +1,5 @@
 name: Email address
-question: Email address the buyer should use to contact you
+question: Contact email
 hint: All communication about your application will be sent to this address.
 
 type: text
