seperates additionalTerms into 1 page for Outcomes and Specialists and 1 for Participants

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -51,7 +51,8 @@
     - securityClearance
     - startDate
     - contractLength
-    - additionalTerms
+    - additionalTermsOutcomesSpecialists
+    - additionalTermsParticipants
     - budgetRangeOutcomesParticipants
     - budgetRangeSpecialists
     - summary
