Additional terms has split for display

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -45,7 +45,8 @@
 -
   name: Additional information
   questions:
-    - additionalTerms
+    - additionalTermsOutcomesSpecialists
+    - additionalTermsParticipants
 -
   name: Skills and experience
   summary_page_description: Buyers will use the essential and nice-to-have skills and experience to help them evaluate suppliers’ technical competence.
