--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -1,14 +1,19 @@
-variation_description: |
+variation_description_not_in_place: |
     The Crown Commercial Service (CCS) proposes to make some minor changes to the framework agreement and call-off 
     contract (reference: RM1557viii-15-07-2016).
     The changes make it easier for suppliers to work with government and are listed here.
     
     These minor changes were agreed while G-Cloud 8 was open for applications.
     The changes were not included in the final documents that were signed on behalf of [[SUPPLIER_NAME]].
-    
-not_agreed_extra: |
+
+variation_not_yet_agreed_extra: |
     To put these changes into effect, we need you to review and accept them here.
     You can [download a PDF version of these changes](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-contract-variation.pdf).
+
+variation_description_in_place: |
+    The Crown Commercial Service (CCS) has made some minor changes to the framework agreement and call-off contract 
+    (reference: RM1557viii-15-07-2016) that make it easier for suppliers to work with government. 
+    These changes have been accepted by suppliers and the contract variation is now in place.
 
 confirmation_message: |
     You have accepted the proposed changes. You’ll be notified when they come into effect. 
