--- a/frameworks/digital-outcomes-and-specialists-2/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/messages/homepage-sidebar.yml
@@ -1,8 +1,8 @@
 coming:
   template_name: 'framework-notice'
-  heading: 'Become a Digital Outcomes and Specialists supplier'
+  heading: 'Become a Digital Outcomes and Specialists 2 supplier'
   message: |
-    **Digital Outcomes and Specialists will be open for applications soon.**
+    **Digital Outcomes and Specialists 2 will be open for applications soon.**
 
     You can apply to provide:
 
@@ -15,18 +15,18 @@ coming:
 
     [Create an account](/suppliers/create) to receive an email when Digital Outcomes and Specialists opens.
 
-    If you already have an account we’ll email you when Digital Outcomes and Specialists opens.
+    If you already have an account we’ll email you when Digital Outcomes and Specialists 2 opens.
 
     [Find out if your services are suitable](https://digitalmarketplace.blog.gov.uk/2015/11/12/digital-outcomes-and-specialists-suitable-suppliers-and-services/)
 open:
   template_name: 'framework-notice'
-  heading: 'Become a Digital Outcomes and Specialists supplier'
+  heading: 'Become a Digital Outcomes and Specialists 2 supplier'
   subheading: |
-    Deadline: 3pm GMT, 19 January 2016
+    Deadline: 5pm GMT, 6 December 2016
 
     *[GMT]: Greenwich Mean Time
   message: |
-    **Digital Outcomes and Specialists is open for applications.**
+    **Digital Outcomes and Specialists 2 is open for applications.**
 
     You can apply to provide:
 
@@ -42,6 +42,6 @@ open:
     [Find out how to apply](https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide)
 pending:
   template_name: 'temporary-message'
-  heading: 'Digital Outcomes and Specialists is closed for applications'
+  heading: 'Digital Outcomes and Specialists 2 is closed for applications'
   messages:
     - 'Applications are being reviewed.'
