Moving serious crime
Adding the Serious Crime Act line from OrganisedCrime question (ESPD mapping)

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/terrorism.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/terrorism.yml
@@ -3,5 +3,7 @@ question: >
 
     - section 41 of the Counter Terrorism Act 2008
     - schedule 2 of the Counter Terrorism Act 2008 where the court has determined that there is a terrorist connection
+    - any offence under sections 44 to 46 of the Serious Crime Act 2007 which relates to an offence covered by subparagraph (f)
+
 type: boolean
 hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
