--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -44,7 +44,7 @@
     Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
   questions:
     - conspiracy
-    - CorruptionBribery
+    - corruptionBribery
     - fraudAndTheft
     - terrorism
     - organisedCrime
