[#131440081] Allow admin to edit Support section for G-Cloud 7 & 8
Copies the entire section from the service submission to keep the
list of questions consistent between the manifests.

Not adding this for G6 since G6 services are no longer publicly
visible in the catalogue.

--- a/frameworks/g-cloud-7/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-7/manifests/edit_service_as_admin.yml
@@ -35,3 +35,12 @@
     - termsAndConditionsDocumentURL
     - sfiaRateDocumentURL
     - pricingDocumentURL
+-
+  name: Support
+  editable: True
+  questions:
+    - supportTypes
+    - supportForThirdParties
+    - supportAvailability
+    - supportResponseTime
+    - incidentEscalation
