--- a/frameworks/g-cloud-8/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-8/manifests/edit_service_as_admin.yml
@@ -35,3 +35,12 @@
     - termsAndConditionsDocumentURL
     - sfiaRateDocumentURL
     - pricingDocumentURL
+-
+  name: Support
+  editable: True
+  questions:
+    - supportTypes
+    - supportForThirdParties
+    - supportAvailability
+    - supportResponseTime
+    - incidentEscalation
