Remove date from framework reference
This date doesn't apply to the framework agreement now that the variation is agreed, so just have ref without date.

--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -12,7 +12,7 @@ variation_not_yet_agreed_extra: |
 
 variation_description_in_place: |
     The Crown Commercial Service (CCS) has made some minor changes to the framework agreement and call-off contract 
-    (reference: RM1557viii-15-07-2016) that make it easier for suppliers to work with government. 
+    (reference: RM1557viii) that make it easier for suppliers to work with government. 
     These changes have been accepted by suppliers and the contract variation is now in place.
 
 confirmation_message: |
