Add DUNS number question to DOS2 declaration

--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -142,6 +142,7 @@
     - firstRegistered
     - currentRegisteredCountry
     - companyRegistrationNumber
+    - dunsNumber
     - registeredVATNumber
     - establishedInTheUK
     - appropriateTradeRegisters
