--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsAndConditions.yml
@@ -1,2 +1,2 @@
-question: "Do you accept the terms and conditions in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists-2/?"
+question: "Do you accept the terms and conditions in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists-2)?"
 type: boolean
