Add "2" to framework name
Using a non-breaking space as we don't want the '2' to wrap onto a line of its own.

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/accuratelyDescribed.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/accuratelyDescribed.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that all the service descriptions you’re submitting for Digital Outcomes and Specialists on the Digital Marketplace will be accurate and true representations?
+question: Do you confirm that all the service descriptions you’re submitting for Digital Outcomes and Specialists&nbsp;2 on the Digital Marketplace will be accurate and true representations?
 type: boolean
