--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/proofOfClaims.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/proofOfClaims.yml
@@ -1,2 +1,2 @@
-question: Are you prepared to provide proof of any claims made about the services you're submitting to Digital Outcomes and Specialists?
+question: Are you prepared to provide proof of any claims made about the services you're submitting to Digital Outcomes and Specialists&nbsp;2?
 type: boolean
