--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/readUnderstoodGuidance.yml
@@ -1,2 +1,2 @@
-question: Have you read and understood the guidance on [how to apply](https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide) to Digital Outcomes and Specialists using the Digital Marketplace?
+question: Have you read and understood the guidance on [how to apply](https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide) to Digital Outcomes and Specialists&nbsp;2 using the Digital Marketplace?
 type: boolean
