--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -37,7 +37,7 @@
     section, it's very unlikely that your bid will be accepted.
 
 
-    In questions [[conspiracyCorruptionBribery]] to [[organisedCrime]], 'anyone who represents your organisation' includes members of your group of economic
+    In questions [[conspiracy]] to [[organisedCrime]], 'anyone who represents your organisation' includes members of your group of economic
     operators, their proposed subcontractors, and any directors, partners, or
     any other person who has powers of representation, decision or control.
     Check that your organisation complies with [Regulation 57(1) of the Public
