Replace &nbsp; with unicode equivalent
We want to move away from marking content as `|safe` in our frontend templates.  To do that we need to not use HTML escape sequences for non-ASCII characters.

--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -3,7 +3,7 @@
   editable: True
   description: >
     You must make this declaration to apply to Digital Outcomes and
-    Specialists&nbsp;2. You can come back and change your answers at any time before
+    Specialists 2. You can come back and change your answers at any time before
     5pm, 6 December 2016.
 
 
@@ -130,7 +130,7 @@
   name: About you
   editable: True
   description: >
-    The Crown Commercial Service will use the information you provide under 'About you' to process your application and manage your participation in the Digital Outcomes and Specialists&nbsp;2 framework.
+    The Crown Commercial Service will use the information you provide under 'About you' to process your application and manage your participation in the Digital Outcomes and Specialists 2 framework.
   questions:
     - primaryContact
     - primaryContactEmail
