--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsOfParticipation.yml
@@ -1,2 +1,2 @@
-question: "Do you agree to comply with the terms of the [Digital Outcomes and Specialists&nbsp;2 invitation to apply for a place on the framework)](/suppliers/frameworks/digital-outcomes-and-specialists-2/)?"
+question: "Do you agree to comply with the terms of the [Digital Outcomes and Specialists 2 invitation to apply for a place on the framework)](/suppliers/frameworks/digital-outcomes-and-specialists-2/)?"
 type: boolean
