--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/employersInsurance.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/employersInsurance.yml
@@ -3,7 +3,7 @@ question: >
   will it have prior to framework award, employer’s liability insurance of at least
   £5 million?
 hint:  Employer’s liability insurance is a legal requirement except for businesses
-  employing only the owner or close family members. You must answer 'Yes' or 'Not applicable' to be eligible for consideration for the Digital Outcomes and Specialists&nbsp;2 framework.
+  employing only the owner or close family members. You must answer 'Yes' or 'Not applicable' to be eligible for consideration for the Digital Outcomes and Specialists 2 framework.
 type: radios
 options:
   -
