--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/subcontracting.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/subcontracting.yml
@@ -1,4 +1,4 @@
-question: "Please confirm whether you will provide Digital Outcomes and Specialists&nbsp;2 services:"
+question: "Please confirm whether you will provide Digital Outcomes and Specialists 2 services:"
 type: radios
 options:
   - label: yourself without the use of third parties (subcontractors)
@@ -6,4 +6,4 @@ options:
   - label: as a prime contractor, using third parties (subcontractors) to provide all services
   - label: as part of a consortium or special purpose vehicle, using members only to provide all services
   - label: as part of a consortium or special purpose vehicle, using third parties (subcontractors) to provide some services
-hint: Only include subcontractors whose products or services will be integral to the Digital Outcomes and Specialists&nbsp;2 services that you intend to provide.
+hint: Only include subcontractors whose products or services will be integral to the Digital Outcomes and Specialists 2 services that you intend to provide.
