--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/endUsers.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/endUsers.yml
@@ -3,11 +3,11 @@ question: Who the users are and what they need to do
 question_advice: |
   You should use this format:
   
-  As a&hellip; (who is the user?)
+  As a… (who is the user?)
   
-  I need to&hellip; (what does the user want to do?)
+  I need to… (what does the user want to do?)
   
-  So that&hellip; (why does the user want to do this?)
+  So that… (why does the user want to do this?)
   
   eg As a carer, I need to know if I can get Carer’s Allowance, so that I know if I should apply for it or not.
 type: textbox_large
