Replace notifications para
Replaced with "Choose all the locations..." for clarifications questions and answers themes edits.

--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
@@ -4,7 +4,7 @@ question: >
   Where can you work on digital outcomes?
 
 
-  You’ll receive notifications for briefs in regions where you can provide services.
+  Choose all the locations where you can work at buyers’ sites, and whether you can work offsite.
 
 
   You can update the regions where you can provide services when the framework is live.
