--- a/frameworks/g-cloud-7/questions/declaration/SQ1-1o.yml
+++ b/frameworks/g-cloud-7/questions/declaration/SQ1-1o.yml
@@ -1,4 +1,4 @@
-question: If your G-Cloud 7 application is successful, what is the contact email that should be included on the contract notice?
+question: If your G‑Cloud 7 application is successful, what is the contact email that should be included on the contract notice?
 hint: The contract notice confirms the outcome of the framework competition and includes the names of all the successful suppliers.
 type: text
 validations:
