--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -3,7 +3,7 @@ variation_description_not_in_place: |
     contract (reference: RM1557viii-15-07-2016).
     The changes make it easier for suppliers to work with government and are listed here.
     
-    These minor changes were agreed while G-Cloud 8 was open for applications.
+    These minor changes were agreed while G‑Cloud 8 was open for applications.
     The changes were not included in the final documents that were signed on behalf of [[SUPPLIER_NAME]].
 
 variation_not_yet_agreed_extra: |
