--- a/frameworks/g-cloud-8/questions/declaration/accuratelyDescribed.yml
+++ b/frameworks/g-cloud-8/questions/declaration/accuratelyDescribed.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that all the services you’re submitting for G-Cloud 8 on the Digital Marketplace will be accurately described?
+question: Do you confirm that all the services you’re submitting for G‑Cloud 8 on the Digital Marketplace will be accurately described?
 type: boolean
