--- a/frameworks/g-cloud-8/questions/declaration/nameOfOrganisation.yml
+++ b/frameworks/g-cloud-8/questions/declaration/nameOfOrganisation.yml
@@ -1,5 +1,5 @@
 
-question: What is the full name of the organisation applying to the G-Cloud 8 framework agreement?
+question: What is the full name of the organisation applying to the G‑Cloud 8 framework agreement?
 type: text
 hint: For a group of economic operators, this will be the name of the lead organisation (or the separate entity such as a special purpose vehicle if you have already created one). If you’re submitting a response on behalf of another organisation, use their company name and details, not yours.
 validations:
