--- a/frameworks/g-cloud-8/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/g-cloud-8/questions/declaration/readUnderstoodGuidance.yml
@@ -1,2 +1,2 @@
-question: Have you read and understood the guidance on [how to apply](https://www.gov.uk/guidance/g-cloud-suppliers-guide) to G-Cloud 8 using the Digital Marketplace?
+question: Have you read and understood the guidance on [how to apply](https://www.gov.uk/guidance/g-cloud-suppliers-guide) to G‑Cloud 8 using the Digital Marketplace?
 type: boolean
