--- a/frameworks/g-cloud-8/questions/declaration/servicesHaveOrSupport.yml
+++ b/frameworks/g-cloud-8/questions/declaration/servicesHaveOrSupport.yml
@@ -1,5 +1,5 @@
 question: |
-  Depending on the lots you’re submitting services to, do you confirm that the services you are submitting to G-Cloud 8 have or support:
+  Depending on the lots you’re submitting services to, do you confirm that the services you are submitting to G‑Cloud 8 have or support:
   
   - on-demand self-service. Your cloud services, eg server time or network storage, must be automatically available without interaction between the supplier and the buyer. (Lots 1, 2, 3.)
   - broad network access. Your cloud services must be easily accessible over the network and across a wide range of platforms (eg mobile phones, tablets, laptops and workstations) and a mix of applications that are both thin (the bulk of data processing occurs on the server) and thick (most processing occurs on the local platform). (Lots 1, 2, 3.)
