--- a/frameworks/g-cloud-7/questions/declaration/SQ1-1a.yml
+++ b/frameworks/g-cloud-7/questions/declaration/SQ1-1a.yml
@@ -1,4 +1,4 @@
-question: What is the full name of the organisation applying to the G-Cloud 7 framework?
+question: What is the full name of the organisation applying to the G‑Cloud 7 framework?
 hint: For a group of economic operators, this will be the name of the lead organisation. If you're submitting a response on behalf of another organisation, use their company name and details, not yours.
 type: text
 validations:
