--- a/frameworks/g-cloud-8/questions/declaration/dunsNumber.yml
+++ b/frameworks/g-cloud-8/questions/declaration/dunsNumber.yml
@@ -1,6 +1,6 @@
 question: What is your organisation’s DUNS number?
 type: text
-hint: The trading organisation applying to sell services through G-Cloud 8 must have its own 9-digit DUNS number. [Find out how to get a DUNS number.](http://www.dnb.co.uk/dandb-duns-number)
+hint: The trading organisation applying to sell services through G‑Cloud 8 must have its own 9-digit DUNS number. [Find out how to get a DUNS number.](http://www.dnb.co.uk/dandb-duns-number)
 
 validations:
   -
