--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/businessAnalystLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/businessAnalystLocations.yml
@@ -1,5 +1,5 @@
 question: Where will your business analyst work?
-question-advice: Choose all the locations where the specialist can work at buyers’ sites, and whether they can work offsite.
+question_advice: Choose all the locations where the specialist can work at buyers’ sites, and whether they can work offsite.
 hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
   - "on": lot
