--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/labPrice.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/labPrice.yml
@@ -1,4 +1,4 @@
-question: What is the minimum amount of time your lab can be booked for and how much does it cost?
+question: What is the minimum amount of time your lab can be booked for and how much does it cost (excluding VAT and expenses)?
 
 depends:
   - "on": lot
