Add VAT and expenses info, and new question_advice
Reason: Edits for clarification q&a themes for DOS 2

--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/contentDesignerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/contentDesignerDayRate.yml
@@ -1,4 +1,5 @@
-question: How much do you charge per day for a content designer?
+question: How much do you charge per day for a content designer (excluding VAT and expenses)?
+question_advice: You won’t be able to charge a higher rate when you apply for opportunities.
 depends:
   - "on": lot
     being:
