--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/portfolioManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/portfolioManagerDayRate.yml
@@ -1,4 +1,5 @@
-question: How much do you charge per day for a portfolio manager?
+question: How much do you charge per day for a portfolio manager (excluding VAT and expenses)?
+question_advice: You won’t be able to charge a higher rate when you apply for opportunities.
 depends:
   - "on": lot
     being:
