--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/securityConsultantDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/securityConsultantDayRate.yml
@@ -1,4 +1,5 @@
-question: How much do you charge per day for a cyber security consultant?
+question: How much do you charge per day for a cyber security consultant (excluding VAT and expenses)?
+question_advice: You won’t be able to charge a higher rate when you apply for opportunities.
 depends:
   - "on": lot
     being:
