Correct link to f/w agreement
Change link pointing at ZIP file to the new documents page.

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/MI.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/MI.yml
@@ -1,2 +1,2 @@
-question: "Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists&nbsp;2-related management information (MI) to CCS as outlined in the [framework agreement (ZIP, 3.2MB)](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?"
+question: "Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists&nbsp;2-related management information (MI) to CCS as outlined in the [framework agreement](https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/digital-outcomes-and-specialists-2)?"
 type: boolean
