Add "a" at start of first bullet - "a participation offence..."

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
@@ -1,7 +1,7 @@
 question: >
   Please confirm whether, within the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of:
 
-    - participation offence as defined by section 45 of the Serious Crime Act 2015
+    - a participation offence as defined by section 45 of the Serious Crime Act 2015
     - conspiracy within the meaning of:
       - section 1 or 1A of the Criminal Law Act 1977 article 
       - 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland) Order 1983 
