Typographical quotes for declaration and service submission

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
@@ -7,4 +7,4 @@ question: >
         - 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland) Order 1983 where that conspiracy relates to participation in a criminal organisation as defined in article 2 of Council Framework Decision 2008/841/JHA on the fight against organised crime
 
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
