--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/fraudAndTheft.yml
@@ -11,4 +11,4 @@ question: >
     - fraud within the meaning of section 2, 3 or 4 of the Fraud Act 2006
     - the possession of articles for use in frauds within the meaning of section 6 of the Fraud Act 2006, or the making, adapting, supplying or offering to supply articles for use in frauds within the meaning of section 7 of that Act
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
