--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/organisedCrime.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/organisedCrime.yml
@@ -9,4 +9,4 @@ question: >
     - an offence in connection with the proceeds of drug trafficking within the meaning of section 49, 50 or 51 of the Drug Trafficking Act 1994; or any other offence within the meaning of article 57(1) of the Directive
     - an offence under section 2 or section 4 of the Modern Slavery Act 2015
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
