--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/terrorism.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/terrorism.yml
@@ -6,4 +6,4 @@ question: >
     - any offence under sections 44 to 46 of the Serious Crime Act 2007 which relates to an offence covered by subparagraph (f)
 
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
