--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/businessAnalyst.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/businessAnalyst.yml
@@ -11,6 +11,6 @@ questions:
   - businessAnalystLocations
   - businessAnalystDayRate
 
-empty_message: You haven't added a business analyst
+empty_message: You haven’t added a business analyst
 
 hint: Analyse a service or organisation’s business processes and systems. Specify, collect and present findings.
