--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/deliveryManager.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/deliveryManager.yml
@@ -11,6 +11,6 @@ questions:
   - deliveryManagerLocations
   - deliveryManagerDayRate
 
-empty_message: You haven't added a delivery manager
+empty_message: You haven’t added a delivery manager
 
 hint: Set up a team for successful delivery. Remove obstacles, track progress, facilitate meetings and help the team organise itself.
