--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/softwareDevelopment.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/softwareDevelopment.yml
@@ -10,4 +10,4 @@ any_of: capability
 questions:
   - softwareDevelopmentTypes
 
-empty_message: You haven't added any software development capabilities
+empty_message: You haven’t added any software development capabilities
