--- a/frameworks/digital-outcomes-and-specialists-2/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/edit_submission.yml
@@ -8,8 +8,8 @@
   editable: True
   description: >
     You must be able to truthfully answer ‘yes’ to every question  for your
-    bid to be considered eligible. If you can't answer ‘yes’ to every question
-    in this section, it's very unlikely that your bid will be accepted.
+    bid to be considered eligible. If you can’t answer ‘yes’ to every question
+    in this section, it’s very unlikely that your bid will be accepted.
   questions:
     - helpGovernmentImproveServices
     - bespokeSystemInformation
@@ -20,8 +20,8 @@
   editable: True
   description: >
     You must be able to truthfully answer ‘yes’ to every question for your bid
-    to be considered eligible. If you can't answer ‘yes’ to every question in
-    this section, it's very unlikely that your bid will be accepted.
+    to be considered eligible. If you can’t answer ‘yes’ to every question in
+    this section, it’s very unlikely that your bid will be accepted.
   questions:
     - anonymousRecruitment
     - manageIncentives
