--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/accurateInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/accurateInformation.yml
@@ -2,5 +2,5 @@ question: >
   Please confirm that:
 
     - all the information in your application is accurate
-    - you will notify the Crown Commercial Service of any changes to the information you've provided as soon as possible
+    - you will notify the Crown Commercial Service of any changes to the information you’ve provided as soon as possible
 type: boolean
