--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/licenceOrMemberRequiredDetails.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/licenceOrMemberRequiredDetails.yml
@@ -1,4 +1,4 @@
-question: If you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]], please give details of the state's requirements and confirm whether you've met them.
+question: If you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]], please give details of the state’s requirements and confirm whether you’ve met them.
 type: text
 validations:
   - name: answer_required
