--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/technologyCodesOfPractice.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/technologyCodesOfPractice.yml
@@ -1,3 +1,3 @@
 question: >
-  Will you comply with the government's latest [technology code of practice](https://www.gov.uk/service-manual/technology/code-of-practice.html)?
+  Will you comply with the government’s latest [technology code of practice](https://www.gov.uk/service-manual/technology/code-of-practice.html)?
 type: boolean
