--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/delivery.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/delivery.yml
@@ -10,4 +10,4 @@ any_of: capability
 questions:
   - deliveryTypes
 
-empty_message: You haven't added any service delivery capabilities
+empty_message: You haven’t added any service delivery capabilities
