--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/programmeManager.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/programmeManager.yml
@@ -11,6 +11,6 @@ questions:
   - programmeManagerLocations
   - programmeManagerDayRate
 
-empty_message: You haven't added a programme manager
+empty_message: You haven’t added a programme manager
 
 hint: Manage and organise groups of related projects so they work together to achieve a strategic objective.
