--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/technicalArchitect.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/technicalArchitect.yml
@@ -11,6 +11,6 @@ questions:
   - technicalArchitectLocations
   - technicalArchitectDayRate
 
-empty_message: You haven't added a technical architect
+empty_message: You haven’t added a technical architect
 
 hint: Break down complex problems and identify steps towards solutions. Coach individuals and engage with non-technical people at all levels of seniority. Write code as a senior member of the development team.
