--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/testingAndAuditingTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/testingAndAuditingTypes.yml
@@ -10,15 +10,15 @@ options:
   - label: Application testing
     description: Ensure the integrity of the product by writing automated tests or conducting manual tests. Investigate the results, and report bugs or issues.
   - label: Data auditing
-    description: Profile data to assess whether it's fit for purpose. Measure the impact of poor quality data on service performance. Highlight problems and suggest changes where appropriate.
+    description: Profile data to assess whether it’s fit for purpose. Measure the impact of poor quality data on service performance. Highlight problems and suggest changes where appropriate.
   - label: Load and performance testing
-    description: Test sites and applications under realistic loads (traffic) to make sure that they're stable and work well for users.
+    description: Test sites and applications under realistic loads (traffic) to make sure that they’re stable and work well for users.
   - label: Process auditing
     description: Review how IT processes are managed, eg establish whether practices are compliant with payment card industry (PCI) standards. Highlight problems and suggest changes where appropriate.
   - label: Software auditing
     description: Provide independent examination of a software product or process to assess compliance with specifications, standards, contracts or other criteria. Highlight problems and suggest changes where appropriate.
   - label: System auditing
-    description: Examine system controls within an IT architecture to test the suitability and validity of a system's IT configurations, practices and operations. Highlight problems and suggest changes where appropriate.
+    description: Examine system controls within an IT architecture to test the suitability and validity of a system’s IT configurations, practices and operations. Highlight problems and suggest changes where appropriate.
 
 validations:
   - name: answer_required
