--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
@@ -8,7 +8,7 @@ question: >
 
 
   You can update the regions where you can provide services when the framework is live.
-hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+hint: "[View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)"
 depends:
   - "on": lot
     being:
