--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/conspiracy.yml
@@ -1,5 +1,5 @@
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of:
+  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
 
     - a participation offence as defined by section 45 of the Serious Crime Act 2015
     - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article
@@ -8,4 +8,4 @@ question: >
       Decision 2008/841/JHA on the fight against organised crime
 
 type: boolean
-hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
