--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/fraudAndTheft.yml
@@ -1,5 +1,5 @@
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
+  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
 
     - the common law offence of cheating the Revenue (HMRC)
     - the common law offence of conspiracy to defraud
@@ -11,4 +11,4 @@ question: >
     - fraud within the meaning of section 2, 3 or 4 of the Fraud Act 2006
     - the possession of articles for use in frauds within the meaning of section 6 of the Fraud Act 2006, or the making, adapting, supplying or offering to supply articles for use in frauds within the meaning of section 7 of that Act
 type: boolean
-hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
