Don't run variation confirmation message through markdown
Confirmation message is used in the notification banner template
that doesn't work if the message is wrapped in a paragraph tag.

Since single-line strings aren't run through markdown the easiest
way to fix it is to join the message lines.

--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -15,9 +15,7 @@ variation_description_in_place: |
     (reference: RM1557viii) that make it easier for suppliers to work with government. 
     These changes have been accepted by suppliers and the contract variation is now in place.
 
-confirmation_message: |
-    You have accepted the proposed changes. You’ll be notified when they come into effect. 
-    Until then, you must use the published framework agreement and call-off contract to sell your services.
+confirmation_message: You have accepted the proposed changes. You’ll be notified when they come into effect. Until then, you must use the published framework agreement and call-off contract to sell your services.
 
 framework_agreement_changes:
     - 
