urls: add framework_agreement_url to "urls" messages schema, add entries for g8, dos2

--- a/frameworks/digital-outcomes-and-specialists-2/messages/urls.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/messages/urls.yml
@@ -1,1 +1,3 @@
+framework_agreement_url: "https://www.gov.uk/government/publications/digital-outcomes-and-specialists-2-framework-agreement"
+
 supplier_guide_url: "https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide#how-to-apply-to-the-framework"
