--- a/frameworks/g-cloud-8/messages/urls.yml
+++ b/frameworks/g-cloud-8/messages/urls.yml
@@ -1,1 +1,3 @@
+framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-8-framework-agreement"
+
 supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply"
