Move declaration questions including links into multiline strings
The new-fangled content loader won't properly markdown questions unless they are multiline strings in the YAML.

This also breaks some very long lines over multiple lines even though they don't have links in, just to help readability in the code.

--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/organisationSize.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/organisationSize.yml
@@ -6,4 +6,5 @@ options:
   - label: medium
   - label: large
 
-hint: "Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
+hint: >
+  Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)
