--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/serviceStandard.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/serviceStandard.yml
@@ -1,3 +1,4 @@
 question: >
-  Are you aware of, and will you comply with, the [Digital Service Standard](https://www.gov.uk/service-manual/service-standard) and the government’s latest [service design principles](https://www.gov.uk/design-principles)?
+  Are you aware of, and will you comply with, the [Digital Service Standard](https://www.gov.uk/service-manual/service-standard) 
+  and the government’s latest [service design principles](https://www.gov.uk/design-principles)?
 type: boolean
