--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/dunsNumber.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/dunsNumber.yml
@@ -1,6 +1,8 @@
 question: What is your organisation’s DUNS number?
 type: text
-hint: The trading organisation applying to sell services through Digital Outcomes and Specialists&nbsp;2 must have its own 9-digit DUNS number. [Find out how to get a DUNS number.](http://www.dnb.co.uk/dandb-duns-number)
+hint: >
+  The trading organisation applying to sell services through Digital Outcomes and Specialists&nbsp;2 must have its own 9-digit DUNS number.
+  [Find out how to get a DUNS number.](http://www.dnb.co.uk/dandb-duns-number)
 
 validations:
   -
