--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/termsOfParticipation.yml
@@ -1,2 +1,3 @@
-question: "Do you agree to comply with the terms of the [Digital Outcomes and Specialists&nbsp;2 ‘invitation to apply’](/suppliers/frameworks/digital-outcomes-and-specialists-2)?"
+question: >
+  Do you agree to comply with the terms of the [Digital Outcomes and Specialists&nbsp;2 ‘invitation to apply’](/suppliers/frameworks/digital-outcomes-and-specialists-2)?
 type: boolean
