Convert fields that are using markdown into multi-line strings
In order to be processed with markdown in the ContentLoader fields
must use YAML multiline syntax. This is converting all single-line
fields that have markdown tags in them (mostly links) into multiline
YAML strings so that they're processed with markdown before being
displayed.

--- a/frameworks/g-cloud-6/questions/services/serviceFeatures.yml
+++ b/frameworks/g-cloud-6/questions/services/serviceFeatures.yml
@@ -1,4 +1,5 @@
-hint: 'Include the technical features of your product, eg real-time reporting, remote access. This content will be indexed by search. Using additional keywords may impact your acceptance on to the Digital Marketplace. Read the [guidance on writing good service descriptions](https://digitalmarketplace.blog.gov.uk/2014/10/21/digital-marketplace-content-its-all-change/). (Maximum 10 words per feature. Maximum 10 features.)'
+hint: >
+    Include the technical features of your product, eg real-time reporting, remote access. This content will be indexed by search. Using additional keywords may impact your acceptance on to the Digital Marketplace. Read the [guidance on writing good service descriptions](https://digitalmarketplace.blog.gov.uk/2014/10/21/digital-marketplace-content-its-all-change/). (Maximum 10 words per feature. Maximum 10 features.)'
 depends:
   -
     "on": lot
