--- a/frameworks/g-cloud-8/questions/declaration/organisationSize.yml
+++ b/frameworks/g-cloud-8/questions/declaration/organisationSize.yml
@@ -6,5 +6,6 @@ options:
   - label: medium
   - label: large
 
-hint: "Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
+hint: >
+    Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
 
