--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/outcomesLocations.yml
@@ -6,7 +6,8 @@ question: |
   Choose all the locations where you can work at buyers’ sites, and whether you can work offsite.
 
   You can update the locations where you can provide services when the framework is live.
-hint: "[View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)"
+hint: >
+    [View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)"
 depends:
   - "on": lot
     being:
