--- a/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
@@ -1,6 +1,7 @@
 id: locations
 question: Where can you recruit participants from?
-hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+hint: >
+    [View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
   - "on": lot
     being:
