--- a/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerLocations.yml
@@ -1,5 +1,6 @@
 question: Where will your service manager work?
-hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+hint: >
+    [View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
   - "on": lot
     being:
