--- a/frameworks/g-cloud-6/questions/services/openStandardsSupported.yml
+++ b/frameworks/g-cloud-6/questions/services/openStandardsSupported.yml
@@ -8,7 +8,8 @@ depends:
       - paas
       - IaaS
       - iaas
-hint: 'Take a look at the [GOV.UK Open Standards principles](https://www.gov.uk/government/publications/open-standards-for-government) for more information on open standards.'
+hint: >
+    Take a look at the [GOV.UK Open Standards principles](https://www.gov.uk/government/publications/open-standards-for-government) for more information on open standards.'
 type: boolean
 validations:
   -
