Fix trailing quotes
Converting markdown questions to multi-line strings left some
trailing quotes that we need to remove.

--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/performanceAnalystLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/performanceAnalystLocations.yml
@@ -1,7 +1,7 @@
 question: Where will your performance analyst work?
 question_advice: Choose all the locations where the specialist can work at buyers’ sites, and whether they can work offsite.
 hint: >
-    [View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)"
+    [View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)
 depends:
   - "on": lot
     being:
