--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/organisationSize.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/organisationSize.yml
@@ -7,4 +7,4 @@ options:
   - label: large
 
 hint: >
-    Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
+    Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)
