--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
@@ -1,3 +1,3 @@
 question: >
-    Do you accept the terms and conditions in the [framework agreement and call-off contract documents (ZIP, 3.2MB)](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?"
+    Do you accept the terms and conditions in the [framework agreement and call-off contract documents (ZIP, 3.2MB)](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
 type: boolean
