--- a/frameworks/g-cloud-7/questions/declaration/SQ1-1m.yml
+++ b/frameworks/g-cloud-7/questions/declaration/SQ1-1m.yml
@@ -1,6 +1,6 @@
 question: What is the size of your organisation?
 hint: >
-    [Check the size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
+    [Check the size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)
 type: radios
 options:
   -
