--- a/frameworks/g-cloud-7/questions/declaration/SQ3-1a.yml
+++ b/frameworks/g-cloud-7/questions/declaration/SQ3-1a.yml
@@ -6,5 +6,5 @@ question: >
     56(2) of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made) in the fields of environmental, social and labour law
 
 hint: >
-    Check that your organisation complies with [Regulation 57(8) in the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made)."
+    Check that your organisation complies with [Regulation 57(8) in the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
 type: boolean
