--- a/frameworks/g-cloud-7/questions/services/openStandardsSupported.yml
+++ b/frameworks/g-cloud-7/questions/services/openStandardsSupported.yml
@@ -9,7 +9,7 @@ depends:
       - IaaS
       - iaas
 hint: >
-    Take a look at the [GOV.UK Open Standards principles](https://www.gov.uk/government/publications/open-standards-for-government) for more information on open standards.'
+    Take a look at the [GOV.UK Open Standards principles](https://www.gov.uk/government/publications/open-standards-for-government) for more information on open standards.
 type: boolean
 validations:
   -
