--- a/frameworks/g-cloud-8/questions/declaration/MI.yml
+++ b/frameworks/g-cloud-8/questions/declaration/MI.yml
@@ -1,3 +1,3 @@
 question: >
-    Do you confirm that you’re prepared to provide all G-Cloud 8-related management information (MI) to CCS as outlined in the [framework agreement (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?"
+    Do you confirm that you’re prepared to provide all G-Cloud 8-related management information (MI) to CCS as outlined in the [framework agreement (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?
 type: boolean
