--- a/frameworks/g-cloud-8/questions/declaration/organisationSize.yml
+++ b/frameworks/g-cloud-8/questions/declaration/organisationSize.yml
@@ -7,5 +7,5 @@ options:
   - label: large
 
 hint: >
-    Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
+    Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)
 
