--- a/frameworks/g-cloud-8/questions/declaration/termsAndConditions.yml
+++ b/frameworks/g-cloud-8/questions/declaration/termsAndConditions.yml
@@ -1,3 +1,3 @@
 question: >
-    Do you accept the terms and conditions in the [framework agreement and call-off contract documents (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?"
+    Do you accept the terms and conditions in the [framework agreement and call-off contract documents (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?
 type: boolean
