--- a/frameworks/g-cloud-8/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/g-cloud-8/questions/declaration/termsOfParticipation.yml
@@ -1,3 +1,3 @@
 question: >
-    Do you agree to comply with the terms of the [G-Cloud 8 Invitation to Tender (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?"
+    Do you agree to comply with the terms of the [G-Cloud 8 Invitation to Tender (ZIP, 2.4MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?
 type: boolean
